[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Akash Vijay <akash@keyvalue.systems>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
tiktoken = "^0.8.0"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
